<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:visible="false"/>
    <item
        android:id="@+id/newCity"
        android:orderInCategory="15"
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:visible="true"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="20"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="30"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>