<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/drawer_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/standart_margin"
    android:paddingTop="@dimen/double_margin"
    android:paddingRight="@dimen/standart_margin"
    android:paddingBottom="@dimen/standart_margin"
    android:theme="@style/AppTheme">

    <ImageView
        android:id="@+id/program_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/standart_margin"
        app:srcCompat="@drawable/week_cloudly" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standart_margin"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
