<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/sizeCaption"
        android:text="@string/forecast"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/switchForecastHistory"
        app:layout_constraintTop_toTopOf="@+id/switchForecastHistory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/sizeCaption"
        android:text="@string/history"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/switchForecastHistory"
        app:layout_constraintTop_toTopOf="@+id/switchForecastHistory"/>

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintTop_toBottomOf="@id/switchForecastHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin"
        android:max="2"
        android:progress="0"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="245dp" />

    <Spinner
        android:id="@+id/spCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:entries="@array/cities_selected"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tvWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/weeks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tvDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tvHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flCityFrame" />

    <FrameLayout
        android:id="@+id/flCityFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        tools:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCity">
    </FrameLayout>


    <FrameLayout
        android:id="@+id/flData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHours"
        tools:layout_editor_absoluteY="480dp"
        tools:layout_height="100dp" />

    <TextView
        android:id="@+id/tvCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/flData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="coordinates"/>

    <Button
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/btnKnowCurrentWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCoordinates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/know_current_place_weather"/>

    <FrameLayout
        android:id="@+id/flCurrentPlaceFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        tools:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKnowCurrentWeather">
    </FrameLayout>

    <com.dmitry.pisarevskiy.abovezero.MySwitchView
        android:id="@+id/switchForecastHistory"
        android:layout_marginTop="@dimen/standart_margin"
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:right="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:back_color="@color/colorPrimary"
        app:main_color="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>